# Agreement-AIQ

./: .gitignore  .railwayignore  .vercelignore  docker-compose.yml  package.json  railway.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_user_auth_and_workspace_user_id.py  ce01b6abad24_add_risk_score_risk_reasoning_clause_.py  ee476f61c318_initial_migration.py
backend/src/: __init__.py  main.py
backend/src/api/: auth.py  clauses.py  conversations.py  documents.py  exports.py  workspaces.py
backend/src/core/: __init__.py  auth.py  cache.py  config.py  database.py  exceptions.py  logging_config.py  retry.py
backend/src/models/: __init__.py  clause.py  conversation.py  document.py  user.py  workspace.py
backend/src/schemas/: __init__.py  auth.py  clause.py  conversation.py  document.py  errors.py  workspace.py
backend/src/services/: __init__.py  clause_deduplicator.py  clause_extractor.py  document_processor.py  embedding_service.py  evidence_pack_generator.py  export_service.py  rag_pipeline.py  vector_store.py
docs/api/: authentication.md  clauses.md  conversations.md  documents.md  exports.md  overview.md  workspaces.md
docs/architecture/: data-flow.md  database-schema.md  overview.md  system-design.md  vector-store.md
docs/development/: project-structure.md  setup.md
docs/user-guide/: clause-extraction.md  documents.md  evidence-packs.md  getting-started.md  qa-conversations.md  workspaces.md
frontend/: next.config.ts  package.json
(+32 files in other folders)
