[project]
name = "contractiq-backend"
version = "0.1.0"
description = "ContractIQ - Document Intelligence & RAG Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.6",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "openai>=1.3.0",
    "instructor>=0.4.0",
    "chromadb>=0.4.15",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "reportlab>=4.0.0",
    "pandas>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "authlib>=1.3.0",
    "bcrypt>=4.1.0",
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    "groq>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

